--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -14,6 +14,8 @@ WORKDIR /bot
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+COPY .. .
+
+ENV PYTHONPATH=/bot/..
 
 CMD ["python", "bot.py"]
