--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -15,7 +15,7 @@ WORKDIR /bot
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY .. .
+COPY . .
 
 ENV PYTHONPATH=/bot/..
 
