--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -1,6 +1,6 @@
-discord.py==2.4.0
-python-dotenv==1.0.1
-playwright==1.44.0
+discord.py==2.3.2
 pymongo==4.7.0
 pydantic==2.7.0
-PyNaCl==1.5.0
+python-dotenv==1.0.1
+playwright==1.44.0
+httpx==0.27.0
