--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -26,4 +26,14 @@ spec:
           service:
             name: api-service
             port:
-              number: 8000 
+              number: 8000
+  - host: valodiscordhub.com
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: frontend-service
+            port:
+              number: 80 
