--- a/k8s/bot-deployment.yaml
+++ b/k8s/bot-deployment.yaml
@@ -50,11 +50,13 @@ spec:
         livenessProbe:
           exec:
             command:
-            - python
+            - sh
             - -c
-            - "import requests; requests.get('http://api-service:8000/healthz')"
-          initialDelaySeconds: 60
+            - "curl -fsS -H 'Authorization: Bot $(echo -n $BOT_API_TOKEN)' http://api-service:8000/healthz > /dev/null"
+          initialDelaySeconds: 90
           periodSeconds: 30
+          timeoutSeconds: 3
+          failureThreshold: 5
 ---
 apiVersion: v1
 kind: Service
